Update footer text and add content to recycle box

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@ theory: `
 
   <h3>ขยะมี 4 ประเภท</h3>
   <div class="grid">
-    <div class="box">♻️ ขยะรีไซเคิล</div>
+    <div class="box">♻️ ขยะรีไซเคิล
+    เทสๆๆๆๆๆๆๆๆๆๆๆๆ</div>
     <div class="box">🍂 ขยะอินทรีย์</div>
     <div class="box">🗑️ ขยะทั่วไป</div>
     <div class="box">☣️ ขยะอันตราย</div>
@@ -251,6 +252,6 @@ function loadPage(page){
 }
 
 window.onload = () => loadPage('home');
-</script><footer>โครงงานวิทยาศาสตร์ โรงเรียนสุราษฎร์พิทยา</footer>
+</script><footer>โครงงาน IS โรงเรียนสุราษฎร์พิทยา</footer>
 </body>
   </html>
